--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="assista loki o filme">
     <link rel="stylesheet" href="style.css">
-    <title>Loki o filme</title>
+    <title>Assista LOKI</title>
 </head>
 <body>
     <main>
